ontotext-yasgui-web-component/src/components/ontotext-dialog-web-component/ontotext-dialog-web-component.scss
@import 'src/css/variables';
@import 'src/css/common';

.dialog-overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  // Because the tooltip we use position itself on z-index: 9999
  z-index: 9998;
  margin-left: -10px;
  background-color: rgba(0, 0, 0, .5);
  font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif;
  font-weight: 300;
  color: #373a3c;
}

.dialog {
  z-index: 1001;
  max-width: 90vw;
  max-height: 90vh;
  background-color: $background-color-onto-default;
  box-shadow: 0 5px 15px rgb(0 0 0 / 50%);
  font-family: inherit;
  font-weight: inherit;
  display: flex;
  flex-direction: column;
  position: unset;

  .dialog-header {
    display: flex;
    justify-content: space-between;
    padding: 15px;
    border-bottom: 1px solid #e5e5e5;
    font-size: 20px;

    .dialog-title {
      margin: .5rem 0;
      font-weight: 400;
    }

    .close-button {
      background-color: #fff;
      border: none;
      outline: none;
      cursor: pointer;
      transition: all .15s ease-out;

      &:hover, &:focus {
        font-weight: bold;
      }
    }
  }

  .dialog-body {
    padding: 15px;
    overflow: auto;
  }

  .dialog-footer {
    display: flex;
    justify-content: flex-end;
    padding: 15px;
    border-top: 1px solid #e5e5e5;

    button {
      display: inline-block;
      font-weight: 400;
      line-height: 1.25;
      text-align: center;
      white-space: nowrap;
      vertical-align: middle;
      cursor: pointer;
      user-select: none;
      border: 1px solid transparent;
      outline: none;
      padding: .5rem 1rem;
      font-size: 1rem;
      border-radius: 0;
      transition: all .15s ease-out;
    }

    @include primaryButton;
    @include secondaryButton;
  }
}

